--- a/src/pages/comps/index.scss
+++ b/src/pages/comps/index.scss
@@ -28,8 +28,20 @@
          gap: 40px;
          margin-top: 30px;
       }
-       
-      
-
-   }
+   } 
+   .filmes{
+         .lista {
+            display: flex;
+            flex-wrap:  wrap;
+            gap: 20px;
+            margin-top: 40px;
+         }
+         .entradas{
+            display: flex;
+            flex-direction: column ;
+            gap: 20px;
+            align-items: start;
+            
+         }
+      }
 }
